syntax = "proto3";

import "mlagents/envs/communicator_objects/brain_parameters.proto";
import "mlagents/envs/communicator_objects/environment_parameters.proto";

option csharp_namespace = "MLAgents.CommunicatorObjects";
package communicator_objects;

// The request message containing the academy's parameters.
message UnityRLInitializationOutputProto {
    string name = 1;
    string version = 2;
    string log_path = 3;
    repeated BrainParametersProto brain_parameters = 5;
    EnvironmentParametersProto environment_parameters = 6;
}
